Updated title tag

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(rz
 
 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<title> : Woodland Beach Resort on Bay Lake, Deerwood Minnesota</title>
+<title>Woodland Beach Resort on Bay Lake, Deerwood Minnesota: A place where friends become family...</title>
 <meta name="DESCRIPTION" content="" />
 <LINK href="css/wbrGlobal2.css" type="text/css" rel="stylesheet">
 <link rel="stylesheet" href="css/lytebox.css" type="text/css" media="screen" />
