More HTTPS updates

--- a/about/photo.html
+++ b/about/photo.html
@@ -120,7 +120,7 @@ function lyteflash(url,width,height,ftitle) {
 <!--PUT TEXT HERE-->
 <h1>Bay Lake's Woodland Beach Resort  Photo Album of Family Fun</h1>
 <p>
-<iframe src="http://www.flickr.com/photos/46656001@N07/albums/72157623230132270/player/" width="640" height="480" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+<iframe src="https://www.flickr.com/photos/46656001@N07/albums/72157623230132270/player/" width="640" height="480" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
 </p>
 
 
@@ -133,8 +133,8 @@ function lyteflash(url,width,height,ftitle) {
 <!--PUT TEXT ENDS HERE-->
 </div>
 <div id="pen2"><img src="/images/pen.png" alt="Woodland Beach Resort. (WRB)" width="349" height="172" border="0" /></div>
-<div id="twitter2"><a href="http://www.flickr.com/photos/46656001@N07/" target="_blank"><img src="/images/flickr.png" alt="Flickr" width="80" height="74" border="0" /></a></div>
-<div id="facebook2"><a href="http://www.facebook.com/search/?q=woodland+beach+resort&init=quick#/pages/Deerwood-MN/Woodland-Beach-Resort/181386119603?v=wall&ref=search" target="_blank"><img src="/images/facebook.png" alt="Facebook" width="80" height="74" border="0" /></a></div>
+<div id="twitter2"><a href="https://www.flickr.com/photos/46656001@N07/" target="_blank"><img src="/images/flickr.png" alt="Flickr" width="80" height="74" border="0" /></a></div>
+<div id="facebook2"><a href="https://www.facebook.com/Woodland-Beach-Resort-181386119603/" target="_blank"><img src="/images/facebook.png" alt="Facebook" width="80" height="74" border="0" /></a></div>
 		</div>
 			<div id="shadowRight"><img src="/images/rightShadow.png" width="31" height="712" border="0" alt="" /></div>
 		</div>
