Fixed the HTTPS issue

--- a/NewSite/content/cabins.html
+++ b/NewSite/content/cabins.html
@@ -640,7 +640,7 @@ Unit 10 &amp; 12 are 4 bedroom 2 bath units. The lofted great room, the 'dreamin
 <br><br><br><br><br>
 </strong></div><strong>
 <div id="pen2"><img src="./cabins_files/pen.png" alt="Woodland Beach Resort. (WRB)" width="349" height="172" border="0"></div>
-<div id="twitter2"><a href="https://web.archive.org/web/20171205061639/http://www.flickr.com/photos/46656001@N07/" target="_blank"><img src="./cabins_files/flickr.png" alt="Flickr" width="80" height="74" border="0"></a></div>
+<div id="twitter2"><a href="https://web.archive.org/web/20171205061639/https://www.flickr.com/photos/46656001@N07/" target="_blank"><img src="./cabins_files/flickr.png" alt="Flickr" width="80" height="74" border="0"></a></div>
 <div id="facebook2"><a href="https://web.archive.org/web/20171205061639/http://www.facebook.com/search/?q=woodland+beach+resort&amp;init=quick#/pages/Deerwood-MN/Woodland-Beach-Resort/181386119603?v=wall&amp;ref=search" target="_blank"><img src="./cabins_files/facebook.png" alt="Facebook" width="80" height="74" border="0"></a></div>			</strong></div><strong>
 			<div id="shadowRight"><img src="./cabins_files/rightShadow.png" width="31" height="712" border="0" alt=""></div>
 		</strong></div><strong>
@@ -655,7 +655,7 @@ Unit 10 &amp; 12 are 4 bedroom 2 bath units. The lofted great room, the 'dreamin
 		<td valign="top" height="30" align="right"><a href="https://web.archive.org/web/20171205061639/http://www.woodlandbeachresort.com:80/cabins/">cabins</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://web.archive.org/web/20171205061639/http://www.woodlandbeachresort.com:80/rates/">rates</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://web.archive.org/web/20171205061639/http://www.woodlandbeachresort.com:80/about/">about us</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://web.archive.org/web/20171205061639/http://www.woodlandbeachresort.com:80/boats/">boats</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://web.archive.org/web/20171205061639/http://www.woodlandbeachresort.com:80/policies/">policies</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://web.archive.org/web/20171205061639/http://www.woodlandbeachresort.com:80/contact/">contact us</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://web.archive.org/web/20171205061639/http://www.woodlandbeachresort.com:80/thestore/">the store</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://web.archive.org/web/20171205061639/http://www.woodlandbeachresort.com:80/about/?ID=photo">photo album</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://web.archive.org/web/20171205061639/http://www.upnorthdreams.com/" target="_blank">real estate</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://web.archive.org/web/20171205061639/http://www.woodlandbeachresort.com:80/maps/">maps</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="https://web.archive.org/web/20171205061639/http://www.woodlandbeachresort.com:80/events/">retreats</a></td>
 	</tr>
 	<tr>
-		<td valign="top" colspan="2" align="right">Copyright ©2002 - 2017&nbsp;&nbsp;&nbsp;Woodland Beach Resort - Bay Lake, MN&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://web.archive.org/web/20171205061639/http://www.brainerd.com/" target="_blank">www.brainerd.com</a></td>
+		<td valign="top" colspan="2" align="right">Copyright ï¿½2002 - 2017&nbsp;&nbsp;&nbsp;Woodland Beach Resort - Bay Lake, MN&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://web.archive.org/web/20171205061639/http://www.brainerd.com/" target="_blank">www.brainerd.com</a></td>
 	</tr>
 </tbody></table>
 </div>
