--- a/NewSite/index.html
+++ b/NewSite/index.html
@@ -67,8 +67,8 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(rz
 		<div id="specials"><a href="specials/"><img src="images/specials.png" alt="WBR Specials" width="180" height="214" border="0" /></a></div>
 	
 <div id="pen"><img src="images/pen.png" alt="Woodland Beach Resort. (WRB)" width="349" height="172" border="0" /></div>
-<div id="twitter"><a href="http://www.flickr.com/photos/46656001@N07/" target="_blank"><img src="images/flickr.png" alt="Flickr" width="80" height="74" border="0" /></a></div>
-<div id="facebook"><a href="http://www.facebook.com/search/?q=woodland+beach+resort&init=quick#/pages/Deerwood-MN/Woodland-Beach-Resort/181386119603?v=wall&ref=search" target="_blank"><img src="images/facebook.png" alt="Facebook" width="80" height="74" border="0" /></a></div>	<div id="backContainer">
+<div id="twitter"><a href="https://www.flickr.com/photos/46656001@N07/" target="_blank"><img src="images/flickr.png" alt="Flickr" width="80" height="74" border="0" /></a></div>
+<div id="facebook"><a href="https://www.facebook.com/Woodland-Beach-Resort-181386119603/" target="_blank"><img src="images/facebook.png" alt="Facebook" width="80" height="74" border="0" /></a></div>	<div id="backContainer">
 		<div id="containerCenter">
 			<div id="shadowLeft"><img src="images/leftShadow.png" width="31" height="712" border="0" alt="" /></div>
 		  <div id="bodyArea"><img src="images/header.jpg" width="982" height="132" border="0" alt=""><br>
