--- a/cabins/cabin10.html
+++ b/cabins/cabin10.html
@@ -206,8 +206,8 @@ function lyteflash(url,width,height,ftitle) {
 <!--CABIN STUFF ENDS HERE--> 
 </div>
 <div id="pen2"><img src="/images/pen.png" alt="Woodland Beach Resort. (WRB)" width="349" height="172" border="0" /></div>
-<div id="twitter2"><a href="http://www.flickr.com/photos/46656001@N07/" target="_blank"><img src="/images/flickr.png" alt="Flickr" width="80" height="74" border="0" /></a></div>
-<div id="facebook2"><a href="http://www.facebook.com/search/?q=woodland+beach+resort&init=quick#/pages/Deerwood-MN/Woodland-Beach-Resort/181386119603?v=wall&ref=search" target="_blank"><img src="/images/facebook.png" alt="Facebook" width="80" height="74" border="0" /></a></div>
+<div id="twitter2"><a href="https://www.flickr.com/photos/46656001@N07/" target="_blank"><img src="/images/flickr.png" alt="Flickr" width="80" height="74" border="0" /></a></div>
+<div id="facebook2"><a href="https://www.facebook.com/Woodland-Beach-Resort-181386119603/" target="_blank"><img src="/images/facebook.png" alt="Facebook" width="80" height="74" border="0" /></a></div>
 		</div>
 			<div id="shadowRight"><img src="/images/rightShadow.png" width="31" height="712" border="0" alt="" /></div>
 		</div>
