--- a/NewSite/content/maps.html
+++ b/NewSite/content/maps.html
@@ -265,7 +265,7 @@ __wm.bt(575,27,25,2,"web","http://www.woodlandbeachresort.com:80/maps/","2017-09
 The resort map shows where your "Up North" cabin is located as well as many of the other features of Woodland Beach Resort.
 </p>
 <p>
-The lake map shows you why Bay Lake is not only one of the première lakes in the Brainerd lakes area but truly a world class lake.  Bay Lake is really a perfect destination for family recreation: Great fishing (visit our photo album) with Walleye, Northern, Bass, Crappie’s and Pan Fish.  With its many bays you can always fish out of the wind and will never be blown off  the lake by high waves.  Bay Lake is also a wonderful lake for water sports of all kinds.
+The lake map shows you why Bay Lake is not only one of the premiï¿½re lakes in the Brainerd lakes area but truly a world class lake.  Bay Lake is really a perfect destination for family recreation: Great fishing (visit our photo album) with Walleye, Northern, Bass, Crappieï¿½s and Pan Fish.  With its many bays you can always fish out of the wind and will never be blown off  the lake by high waves.  Bay Lake is also a wonderful lake for water sports of all kinds.
 </p>
 <p>
 <strong>See for yourself why so many other families choose Woodland Beach Resort for their "Up North" vacation.</strong>
@@ -284,7 +284,7 @@ The lake map shows you why Bay Lake is not only one of the première lakes in the
 </table>
 </div>
 <div id="pen2"><img src="/web/20170905040707im_/http://www.woodlandbeachresort.com:80/images/pen.png" alt="Woodland Beach Resort. (WRB)" width="349" height="172" border="0"/></div>
-<div id="twitter2"><a href="https://web.archive.org/web/20170905040707/http://www.flickr.com/photos/46656001@N07/" target="_blank"><img src="/web/20170905040707im_/http://www.woodlandbeachresort.com:80/images/flickr.png" alt="Flickr" width="80" height="74" border="0"/></a></div>
+<div id="twitter2"><a href="https://web.archive.org/web/20170905040707/https://www.flickr.com/photos/46656001@N07/" target="_blank"><img src="/web/20170905040707im_/http://www.woodlandbeachresort.com:80/images/flickr.png" alt="Flickr" width="80" height="74" border="0"/></a></div>
 <div id="facebook2"><a href="https://web.archive.org/web/20170905040707/http://www.facebook.com/search/?q=woodland+beach+resort&amp;init=quick#/pages/Deerwood-MN/Woodland-Beach-Resort/181386119603?v=wall&amp;ref=search" target="_blank"><img src="/web/20170905040707im_/http://www.woodlandbeachresort.com:80/images/facebook.png" alt="Facebook" width="80" height="74" border="0"/></a></div>			</div>
 			<div id="shadowRight"><img src="/web/20170905040707im_/http://www.woodlandbeachresort.com:80/images/rightShadow.png" width="31" height="712" border="0" alt=""/></div>
 		</div>
