--- a/about/about.html
+++ b/about/about.html
@@ -134,7 +134,7 @@ We have a store on the premises with milk, bread, snacks, sundries and ice cream
 <!--PUT TEXT ENDS HERE-->
 </div>
 <div id="pen2"><img src="/images/pen.png" alt="Woodland Beach Resort. (WRB)" width="349" height="172" border="0" /></div>
-<div id="twitter2"><a href="http://www.flickr.com/photos/46656001@N07/" target="_blank"><img src="/images/flickr.png" alt="Flickr" width="80" height="74" border="0" /></a></div>
+<div id="twitter2"><a href="https://www.flickr.com/photos/46656001@N07/" target="_blank"><img src="/images/flickr.png" alt="Flickr" width="80" height="74" border="0" /></a></div>
 <div id="facebook2"><a href="https://www.facebook.com/Woodland-Beach-Resort-181386119603/" target="_blank"><img src="/images/facebook.png" alt="Facebook" width="80" height="74" border="0" /></a></div>
 		</div>
 			<div id="shadowRight"><img src="/images/rightShadow.png" width="31" height="712" border="0" alt="" /></div>
