Updated google https for anyaltics

--- a/cabins/cabin2.html
+++ b/cabins/cabin2.html
@@ -233,7 +233,7 @@ Relax and enjoy a peaceful day at Woodland Beach Resort. Wraparound deck comes e
 	</tr>
 </table>
 </div>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<script src="https://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-1004322-1";
