--- a/NewSite/index.html
+++ b/NewSite/index.html
@@ -169,7 +169,7 @@ Enjoy the world class 25-mile mountain bike trails, covering 800 acres in the Cu
 	</tr>
 </table>
 </div>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<script src="https://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-1004322-1";
