--- a/about/about.html
+++ b/about/about.html
@@ -155,7 +155,7 @@ We have a store on the premises with milk, bread, snacks, sundries and ice cream
 	</tr>
 </table>
 </div>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<script src="https://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-1004322-1";
