--- a/about/amenities.html
+++ b/about/amenities.html
@@ -157,7 +157,7 @@ All cabins have new Mitsubishi split system air conditioning with heat pumps in 
 	</tr>
 </table>
 </div>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<script src="https://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-1004322-1";
