--- a/about/fishing.html
+++ b/about/fishing.html
@@ -151,7 +151,7 @@ Lynn Harker is a life long resident of the area and has fished the area lakes fo
 	</tr>
 </table>
 </div>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<script src="https://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-1004322-1";
