--- a/boats/boats.html
+++ b/boats/boats.html
@@ -303,7 +303,7 @@ Ideal for 3 to 5 people.</td>
 	</tr>
 </table>
 </div>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<script src="https://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-1004322-1";
