--- a/cabins/cabin18.html
+++ b/cabins/cabin18.html
@@ -224,7 +224,7 @@ There are two queen beds and 4 twin beds in Cabin 18.
 	</tr>
 </table>
 </div>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<script src="https://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-1004322-1";
