--- a/cabins/cabin19.html
+++ b/cabins/cabin19.html
@@ -214,7 +214,7 @@ function lyteflash(url,width,height,ftitle) {
 	</tr>
 </table>
 </div>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<script src="https://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-1004322-1";
