--- a/cabins/cabin50.html
+++ b/cabins/cabin50.html
@@ -167,7 +167,7 @@ Unit 10 &amp; 12 are 4 bedroom 2 bath units. The lofted great room, the 'dreamin
 	</tr>
 </table>
 </div>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<script src="https://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-1004322-1";
