--- a/contact/contact.html
+++ b/contact/contact.html
@@ -160,7 +160,7 @@ Email: <a href="mailto:kpmwalleye@aol.com">kpmwalleye@aol.com</a><br/>
 	</tr>
 </table>
 </div>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<script src="https://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-1004322-1";
