--- a/events/index.html
+++ b/events/index.html
@@ -280,7 +280,7 @@ Deerwood, MN 56444<br/>
 	</tr>
 </table>
 </div>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<script src="https://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-1004322-1";
