--- a/rates/cabins.html
+++ b/rates/cabins.html
@@ -1114,7 +1114,7 @@ All prices subject to change.  All prices subject to 6.875% Minnesota Sales Tax 
 	</tr>
 </table>
 </div>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<script src="https://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-1004322-1";
