--- a/specials/specials.html
+++ b/specials/specials.html
@@ -170,7 +170,7 @@ Call 218-866-0711 or toll free at 1-888-436-7770 for more information and availa
 	</tr>
 </table>
 </div>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+<script src="https://www.google-analytics.com/urchin.js" type="text/javascript">
 </script>
 <script type="text/javascript">
 _uacct = "UA-1004322-1";
