--- a/boats/boats.html
+++ b/boats/boats.html
@@ -203,11 +203,11 @@ Ideal for 3 to 5 people.</td>
 
 <table cellspacing="0" cellpadding="0" border="0" class="boatRates">
 	<tr>
-		<td valign="top"><img src="/images/pontoon_2.jpg" width="204" height="205" border="0"></td>
+		<td valign="top"><img src="/images/Montego.jpg" width="204" height="205" border="0"></td>
 		<td width="408" valign="top">
 		<table cellpadding="0" cellspacing="0" border="0" width="408" height="205" background="/images/boat_rate.gif" style="background-repeat:no-repeat; ">
 			<tr>
-				<td width="408" valign="top" style="padding:0 0 0 15px;" colspan="4" height="30"><h2>20' Weeres 2009 Pontoon</h2></td>
+				<td width="408" valign="top" style="padding:0 0 0 15px;" colspan="4" height="30"><h2>22' Montego Bay 2019 Pontoon</h2></td>
 			</tr>
 			<tr>
 				<td width="21" valign="top">&nbsp;</td>
@@ -217,15 +217,38 @@ Ideal for 3 to 5 people.</td>
 			</tr>
 			<tr>
 				<td height="130" width="21" valign="top">&nbsp;</td>
-				<td height="130" width="83" valign="top" align="center">$259.00 -   Plus gas used</td>
-				<td height="130" width="77" valign="top" align="center">$945.00 - Plus gas used</td>
-				<td height="130" width="190" style="padding:0px 27px 0 10px;" valign="top">20' Pontoon Boat complete with upholstered seating for 10 people, 40 hp motor and depthfinder. <br><strong> $250.00 Damage deposit.</td>
+				<td height="130" width="83" valign="top" align="center">$299.00 -   Plus gas used</td>
+				<td height="130" width="77" valign="top" align="center">$1,099.00 - Plus gas used</td>
+				<td height="130" width="190" style="padding:0px 27px 0 10px;" valign="top">22' Pontoon Boat complete with seating for 12 people.  60 hp motor and depth-finder.  <br><strong> $250.00 Damage deposit.</td>
 			</tr>
 		</table>
 		</td>
 	</tr>
 </table>
-
+<table cellspacing="0" cellpadding="0" border="0" class="boatRates">
+	<tr>
+		<td valign="top"><img src="/images/Montego.jpg" width="204" height="205" border="0"></td>
+		<td width="408" valign="top">
+		<table cellpadding="0" cellspacing="0" border="0" width="408" height="205" background="/images/boat_rate.gif" style="background-repeat:no-repeat; ">
+			<tr>
+				<td width="408" valign="top" style="padding:0 0 0 15px;" colspan="4" height="30"><h2>22' Montego Bay 2019 Pontoon</h2></td>
+			</tr>
+			<tr>
+				<td width="21" valign="top">&nbsp;</td>
+				<td width="83" valign="top" align="center"><h3>DAY</h3></td>
+				<td width="77" valign="top" align="center"><h3>WEEK</h3></td>
+				<td width="190" style="padding:0px 0 0 10px;" valign="top"><h3>DESCRIPTION</h3></td>
+			</tr>
+			<tr>
+				<td height="130" width="21" valign="top">&nbsp;</td>
+				<td height="130" width="83" valign="top" align="center">$299.00 -   Plus gas used</td>
+				<td height="130" width="77" valign="top" align="center">$1,099.00 - Plus gas used</td>
+				<td height="130" width="190" style="padding:0px 27px 0 10px;" valign="top">22' Pontoon Boat complete with seating for 12 people.  60 hp motor and depth-finder.  <br><strong> $250.00 Damage deposit.</td>
+			</tr>
+		</table>
+		</td>
+	</tr>
+</table>
 <table cellspacing="0" cellpadding="0" border="0" class="boatRates">
 	<tr>
 		<td valign="top"><img src="/images/fishhawk.jpg" width="204" height="205" border="0"></td>
