Text Updates for 2019
Per Kevin

--- a/rates/cabins.html
+++ b/rates/cabins.html
@@ -1072,6 +1072,7 @@ Paddle Boards/Kayaks........Free to use to Woodland Beach Resort Guests Only<br/
 Paddle Boat........Free to use to Woodland Beach Resort Guests Only<br/>
 Canoe........Free to use to Woodland Beach Resort Guests Only<br/>
 Boat slip (1)........$45.00 per stay. All pontoons or larger boats need prior approval<br/>
+Pontoon slip (1)........$90 per stay<br/>
 <br/>
 <br/>
 <strong>PET CHARGES</strong><br/>
