--- a/rates/cabins.html
+++ b/rates/cabins.html
@@ -500,6 +500,14 @@ function lyteflash(url,width,height,ftitle) {
 	</tr>
 	<tr>
 		<td width="21" valign="top">&nbsp;</td>
+		<td width="187" valign="top"><h3>DATES</h3></td>
+		<td width="38" valign="top" align="center">&nbsp;</td>
+		<td width="83" valign="top" align="center"><h3>WEEK</h3></td>
+		<td width="86" valign="top" align="center"><h3>NIGHT</h3></td>
+		<td width="190" style="padding:0px 0 0 10px;" valign="top"><h3>OTHER INFORMATION</h3></td>
+	</tr>
+	<tr>
+		<td width="21" valign="top">&nbsp;</td>
 		<td width="187" valign="top">5/1/19-6/21/19 &amp; 9/3/19-10/31/19</td>
 		<td width="38" valign="top" align="center">&nbsp;</td>
 		<td width="83" valign="top" align="center">$1,050.00</td>
@@ -517,7 +525,7 @@ function lyteflash(url,width,height,ftitle) {
 		<td width="21" valign="top">&nbsp;</td>
 		<td width="187" valign="top">8/10/19 - 9/2/19</td>
 		<td width="38" valign="top" align="center">&nbsp;</td>
-		<td width="83" valign="top" align="center">$1,225.00</td>
+		<td width="83" valign="top" align="center">$1225.00</td>
 		<td width="86" valign="top" align="center">$279.00</td>
 	</tr>
 	<tr>
