--- a/cabins/cabin18.html
+++ b/cabins/cabin18.html
@@ -148,7 +148,7 @@ There are two queen beds and 4 twin beds in Cabin 18.
 		
 		</td>
 		<td width="231" valign="top" width="331">
-		<img src="/images/cabin18-lg.jpg" width="331" height="267" border="0" alt="Cabin 18 : Est.2007 on Bay Lake, MN"><br><a href="cabin/photos.asp?FID=72157623160777003&amp;CID=18" rel="lyteframe" title="More Photos From Cabin 18 : Est.2007" rev="width: 609px; height: 480px; scrolling: no;"><img src="/images/btn-view-photos.jpg" width="119" height="17" border="0" alt="View More Photos" align="right" style="padding-right:25px; "/></a>
+		<img src="/images/cabin18-lg.jpg" width="331" height="267" border="0" alt="Cabin 18 : Est.2007 on Bay Lake, MN"><br><a href="cabin/photos.html?FID=72157623160777003&amp;CID=18" rel="lyteframe" title="More Photos From Cabin 18 : Est.2007" rev="width: 609px; height: 480px; scrolling: no;"><img src="/images/btn-view-photos.jpg" width="119" height="17" border="0" alt="View More Photos" align="right" style="padding-right:25px; "/></a>
 		</td> 
 	</tr>
 </table>
