--- a/cabins/cabin10.html
+++ b/cabins/cabin10.html
@@ -149,7 +149,7 @@ function lyteflash(url,width,height,ftitle) {
 		
 		</td>
 		<td width="231" valign="top" width="331">
-		<img src="/images/cabin10-lg.jpg" width="331" height="267" border="0" alt="Cabin 10 : Est.2005 on Bay Lake, MN"><br><a href="cabin/photos.asp?FID=72157626034943764&amp;CID=10" rel="lyteframe" title="More Photos From Cabin 10 : Est.2005" rev="width: 609px; height: 480px; scrolling: no;"><img src="/images/btn-view-photos.jpg" width="119" height="17" border="0" alt="View More Photos" align="right" style="padding-right:25px; "/></a>
+		<img src="/images/cabin10-lg.jpg" width="331" height="267" border="0" alt="Cabin 10 : Est.2005 on Bay Lake, MN"><br><a href="cabin/photos.html?FID=72157626034943764&amp;CID=10" rel="lyteframe" title="More Photos From Cabin 10 : Est.2005" rev="width: 609px; height: 480px; scrolling: no;"><img src="/images/btn-view-photos.jpg" width="119" height="17" border="0" alt="View More Photos" align="right" style="padding-right:25px; "/></a>
 		</td> 
 	</tr>
 </table>
