--- a/cabins/cabin14.html
+++ b/cabins/cabin14.html
@@ -147,7 +147,7 @@ function lyteflash(url,width,height,ftitle) {
 		
 		</td>
 		<td width="231" valign="top" width="331">
-		<img src="/images/cabin14-lg.jpg" width="331" height="267" border="0" alt="Cabin 14 : Est.1967 on Bay Lake, MN"><br><a href="cabin/photos.asp?FID=72157623159075789&amp;CID=14" rel="lyteframe" title="More Photos From Cabin 14 : Est.1967" rev="width: 609px; height: 480px; scrolling: no;"><img src="/images/btn-view-photos.jpg" width="119" height="17" border="0" alt="View More Photos" align="right" style="padding-right:25px; "/></a>
+		<img src="/images/cabin14-lg.jpg" width="331" height="267" border="0" alt="Cabin 14 : Est.1967 on Bay Lake, MN"><br><a href="cabin/photos.html?FID=72157623159075789&amp;CID=14" rel="lyteframe" title="More Photos From Cabin 14 : Est.1967" rev="width: 609px; height: 480px; scrolling: no;"><img src="/images/btn-view-photos.jpg" width="119" height="17" border="0" alt="View More Photos" align="right" style="padding-right:25px; "/></a>
 		</td> 
 	</tr>
 </table>
