--- a/cabins/cabin17.html
+++ b/cabins/cabin17.html
@@ -139,7 +139,7 @@ function lyteflash(url,width,height,ftitle) {
 		
 		</td>
 		<td width="231" valign="top" width="331">
-		<img src="/images/cabin17-lg.jpg" width="331" height="267" border="0" alt="Cabin 17 : Est.1940 on Bay Lake, MN"><br><a href="cabin/photos.asp?FID=72157623160318031&amp;CID=17" rel="lyteframe" title="More Photos From Cabin 17 : Est.1940" rev="width: 609px; height: 480px; scrolling: no;"><img src="/images/btn-view-photos.jpg" width="119" height="17" border="0" alt="View More Photos" align="right" style="padding-right:25px; "/></a>
+		<img src="/images/cabin17-lg.jpg" width="331" height="267" border="0" alt="Cabin 17 : Est.1940 on Bay Lake, MN"><br><a href="cabin/photos.html?FID=72157623160318031&amp;CID=17" rel="lyteframe" title="More Photos From Cabin 17 : Est.1940" rev="width: 609px; height: 480px; scrolling: no;"><img src="/images/btn-view-photos.jpg" width="119" height="17" border="0" alt="View More Photos" align="right" style="padding-right:25px; "/></a>
 		</td> 
 	</tr>
 </table>
