--- a/cabins/cabin2.html
+++ b/cabins/cabin2.html
@@ -154,7 +154,7 @@ Relax and enjoy a peaceful day at Woodland Beach Resort. Wraparound deck comes e
 		
 		</td>
 		<td width="231" valign="top" width="331">
-		<img src="/images/cabin2-lg.jpg" width="331" height="267" border="0" alt="Cabin 02 : Est.1984 on Bay Lake, MN"><br><a href="cabin/photos.asp?FID=72157623284859780&amp;CID=2" rel="lyteframe" title="More Photos From Cabin 02 : Est.1984" rev="width: 609px; height: 480px; scrolling: no;"><img src="/images/btn-view-photos.jpg" width="119" height="17" border="0" alt="View More Photos" align="right" style="padding-right:25px; "/></a>
+		<img src="/images/cabin2-lg.jpg" width="331" height="267" border="0" alt="Cabin 02 : Est.1984 on Bay Lake, MN"><br><a href="cabin/photos.html?FID=72157623284859780&amp;CID=2" rel="lyteframe" title="More Photos From Cabin 02 : Est.1984" rev="width: 609px; height: 480px; scrolling: no;"><img src="/images/btn-view-photos.jpg" width="119" height="17" border="0" alt="View More Photos" align="right" style="padding-right:25px; "/></a>
 		</td> 
 	</tr>
 </table>
