--- a/about/amenities.html
+++ b/about/amenities.html
@@ -120,6 +120,13 @@ function lyteflash(url,width,height,ftitle) {
 <!--PUT TEXT HERE-->
 <h1> Our Amenities</h1>
 <p>
+	<h2><NEW FOR 2019:/h2>
+	Two new 22' Montego Bay Pontoons and all new dock decking.
+</p>
+
+
+
+<p>
  <h2>"NEW POOL &amp; HUGE HOT TUB" NOW OPEN!!!</h2>
 The new pool and hot tub is located behind the store and in back of cabin #18, #19 and #20.  The pool size is 16' x 40' and 8 person hot tub.  There is lots of concrete with 16 loungers 4 tables and 16 chairs.
 <br/><br/>
