--- a/rates/cabins.html
+++ b/rates/cabins.html
@@ -116,7 +116,7 @@ function lyteflash(url,width,height,ftitle) {
 
 <div id="bodyText">
 <!--CABIN STUFF HERE--> 
-<h1>Rates for your stay at Woodland Beach Resort on Bay Lake</h1>
+<h1>2019 Rates for your stay at Woodland Beach Resort on Bay Lake</h1>
 
 <table cellpadding="0" cellspacing="0" border="0" width="632" height="206" background="/images/cabin_rate.gif" style="background-repeat:no-repeat;" class="boatRates">
 	<tr>
@@ -1079,8 +1079,13 @@ Paddle Boards/Kayaks........Free to use to Woodland Beach Resort Guests Only<br/
 <br/>
 Paddle Boat........Free to use to Woodland Beach Resort Guests Only<br/>
 Canoe........Free to use to Woodland Beach Resort Guests Only<br/>
-Boat slip (1)........$45.00 per stay. All pontoons or larger boats need prior approval<br/>
-Pontoon slip (1)........$90 per stay<br/>
+Boat slip (1)........$45.00 per stay. All larger boats require prior approval.  Let us know size of boat.<br/>
+Pontoon slip (1)........$90 per stay. All pontoons require prior approval.  Let us know size of pontoon.<br/>
+
+
+
+
+
 <br/>
 <br/>
 <strong>PET CHARGES</strong><br/>
