--- a/events/index.html
+++ b/events/index.html
@@ -207,17 +207,19 @@ function lyteflash(url,width,height,ftitle) {
 </table>
 <br/>
 <h2>Rates</h2>
-<p>For a weekend retreat (Friday at 10am to Sunday at 4pm).  Rate includes use of meeting area and one person per bed.</p>
-<p><strong>6 people or less - $125 per person<br/>
-7-12 people - $110 per person<br/>
+<p>For a weekend retreat (Arrive Friday at 10:00 AM and depart by Sunday at 4:00 PM).  Rate includes use of meeting area and one person per bed.</p>
+<p>Add a night or two for $45.00 per night per day.</p>
+<p><strong>8 people or less - $125 per person<br/>
+9-12 people - $110 per person<br/>
 13+ people - $95 per person<br/>
 </strong></p>
 <p>With 15+ people the hostess stays free</p>
 <p>Rates not including 6.875% Minnesota Sales Tax and 1/2%local tax</p>
-<p>These rates are good between 1/5/16 - 5/16/16 and 9/6/16 - 5/15/17.</p>
+<p>These rates are good between 1/4/19 - 5/13/19 and 9/6/19 - 5/11/19.</p>
 <p>During the summer June, July and August we rent by the week, see cabin rate sheet.</p>
 <p>Please note that dogs are permitted for an additional fee.</p>
 <p>Contact us about rates for extra nights and additional information.</p>
+
 <h2>Dining</h2>
 <p>There is a snack kitchen in the lodge that has a refrigerator/freezer, sink, microwave, coffeepot, and plenty of counter space for serving, so you can create meals for your guests, have a potluck, or order takeout or delivery.  Each cabin has a fully equipped kitchen including stove, microwave, full-size refrigerator, and dishwasher.  The cabins are also stocked with pots, pans, plates, silverware, and other essential dishes.  There is a grocery store in Garrison just 8 miles away from the resort for last minute meal essentials.  Please call us for more information on catering or delivery options.</p>
 <h2>Things to Bring</h2>
