--- a/specials/specials.html
+++ b/specials/specials.html
@@ -121,21 +121,21 @@ function lyteflash(url,width,height,ftitle) {
 <h1>Specials at Woodland Beach Resort on Bay Lake</h1>
 <p> 
 <br>
-Come enjoy the FALL at WOODLAND BEACH RESORT!!!
+Come enjoy the Winter at WOODLAND BEACH RESORT!!!
 <br><br>
 Book your 2019 Summer Vacation NOW!!! We still have some great cabins available next summer!!!
 <br><br>
-<strong>FALL SPECIAL!!!</strong>  Stay two nights and get the 3rd night 1/2 off our published off-season rates.
+<!--<strong>FALL SPECIAL!!!</strong>  Stay two nights and get the 3rd night 1/2 off our published off-season rates.
 <br>
 Valid September 14th - October 21st, must mention offer at time of booking.
-<br><br>
+<br><br>-->
 <strong>SPECIAL</strong> - Four bedroom two bath luxury cabins 10, 12, 18, 19 & 20 for $299.00 per night two night minimum stay.
 <br>
-Valid - Now - October 31
+Valid - Now - May 15
 <br><br>
 Two bedroom luxury cabins 9 & 11 for $199.00 per night, two night minimum stay.
 <br>
-Valid - Now - October 31<br><br>
+Valid - Now - May 15<br><br>
 Labor Day 2019- Pay for the week of August 24th and stay till Labor Day, two nights FREE!!!
 <br><br>
 Enjoy your vacation by our NEWER POOL & HOT TUB Open by Memorial Day - October 1st and be on one of Minnesota's hidden jewels BAY LAKE
