--- a/specials/specials.html
+++ b/specials/specials.html
@@ -129,7 +129,7 @@ Book your 2019 Summer Vacation NOW!!! We still have some great cabins available 
 <br>
 Valid September 14th - October 21st, must mention offer at time of booking.
 <br><br>-->
-<strong>SPECIAL</strong> - Four bedroom two bath luxury cabins 10, 12, 18, 19 & 20 for $299.00 per night two night minimum stay.
+<strong>SPECIAL</strong> - Four bedroom two bath luxury cabins 10, 12, 18, 19 & 20 for $299.00 per night three night minimum stay.
 <br>
 Valid - August 28th - October 28th.
 <br><br>
