--- a/about/photos.html
+++ b/about/photos.html
@@ -120,7 +120,7 @@ function lyteflash(url,width,height,ftitle) {
 <!--PUT TEXT HERE-->
 <h1>Bay Lake's Woodland Beach Resort  Photo Album of Family Fun</h1>
 <p>
-<iframe src="https://www.flickr.com/photos/46656001@N07/albums/72157623230132270/" width="640" height="480" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+	<a data-flickr-embed="true"  href="https://www.flickr.com/photos/46656001@N07/albums/72157623230132270" title="WBR Photo Album"><img src="https://live.staticflickr.com/4022/4282996092_4f354daa91_z.jpg" width="640" height="426" alt="WBR Photo Album"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 </p>
 
 
