--- a/cabins/cabin/photos.html
+++ b/cabins/cabin/photos.html
@@ -17,7 +17,7 @@
 	var FID = getUrlVars()["FID"];
 	var CID = getUrlVars()["CID"];
 
-	var flicker = "https://www.flickr.com/photos/46656001@N07/albums/" + FID + "/player/";
+	var flicker = "https://www.flickr.com/photos/46656001@N07/albums/" + FID;
 
 	
 	</script>
@@ -32,11 +32,13 @@ body {
 
 <body>
 
-<iframe src="http://www.woodlandbeachresort.com" id="flick" width="599" height="470" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+<iframe src="http://www.woodlandbeachresort.com"  width="599" height="470" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+
+<a data-flickr-embed="true"  href="https://www.flickr.com/photos/46656001@N07/albums/72157623230132270" title="WBR Photo Album" id="flick"><img src="https://live.staticflickr.com/4022/4282996092_4f354daa91_z.jpg" width="640" height="426" alt="WBR Photo Album"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 
 <script>
 var x = flicker;
-document.getElementById("flick").src = x;
+document.getElementById("flick").herf = x;
 </script>
 
 
