--- a/cabins/cabin/photos.html
+++ b/cabins/cabin/photos.html
@@ -32,7 +32,7 @@ body {
 
 <body>
 
-<a data-flickr-embed="true"  href="https://www.flickr.com/photos/46656001@N07/albums/72157623230132270" title="WBR Photo Album" id="flick"><img src="https://live.staticflickr.com/4022/4282996092_4f354daa91_z.jpg" width="640" height="426" alt="WBR Photo Album"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+<a data-flickr-embed="true"  href="https://www.woodlandbaechresort.com" title="WBR Photo Album" id="flick"><img src="https://live.staticflickr.com/4022/4282996092_4f354daa91_z.jpg" width="640" height="426" alt="WBR Photo Album"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 
 <script>
 var x = flicker;
