more code for the photos

--- a/cabins/cabin/photos.html
+++ b/cabins/cabin/photos.html
@@ -19,6 +19,10 @@
 
 	var flicker = "https://www.flickr.com/photos/46656001@N07/albums/" + FID;
 
+	var x = flicker;
+    document.getElementById("flick").herf = x;
+
+	
 	
 	</script>
 <style>
@@ -32,12 +36,8 @@ body {
 
 <body>
 
-<a data-flickr-embed="true"  href="https://www.woodlandbaechresort.com" title="WBR Photo Album" id="flick"><img src="https://live.staticflickr.com/4022/4282996092_4f354daa91_z.jpg" width="640" height="426" alt="WBR Photo Album"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+<a data-flickr-embed="true" href="https://www.woodlandbaechresort.com"  id="flick" title="WBR Photo Album"><img src="https://live.staticflickr.com/4022/4282996092_4f354daa91_z.jpg" width="640" height="426" alt="WBR Photo Album"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 
-<script>
-var x = flicker;
-document.getElementById("flick").herf = x;
-</script>
 
 
 </body>
