removed the var flickr

--- a/cabins/cabin/photos.html
+++ b/cabins/cabin/photos.html
@@ -19,8 +19,8 @@
 
 	var flicker = "https://www.flickr.com/photos/46656001@N07/albums/" + FID;
 
-	var x = flicker;
-    document.getElementById("flick").herf = x;
+	
+    document.getElementById("flick").herf = flicker;
 
 	
 	
