--- a/cabins/cabin/photos.html
+++ b/cabins/cabin/photos.html
@@ -20,7 +20,7 @@
 	var flicker = "https://www.flickr.com/photos/46656001@N07/albums/" + FID;
 
 	
-    document.getElementById("flick").herf = flicker;
+    document.getElementById("flick").herf= "'" + flicker + "'" ;
 
 	
 	
