--- a/cabins/cabin/photos.html
+++ b/cabins/cabin/photos.html
@@ -20,7 +20,7 @@
 	var flicker = "https://www.flickr.com/photos/46656001@N07/albums/" + FID;
 
 	
-    document.getElementById("flick").herf= "'" + flicker + "'" ;
+    
 
 	
 	
@@ -38,7 +38,9 @@ body {
 
 <a data-flickr-embed="true" href="https://www.woodlandbaechresort.com"  id="flick" title="WBR Photo Album"><img src="https://live.staticflickr.com/4022/4282996092_4f354daa91_z.jpg" width="640" height="426" alt="WBR Photo Album"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 
-
+<script>
+	document.getElementById("flick").herf = flicker;
+</script>
 
 </body>
 </html>
