--- a/cabins/cabin/photos.html
+++ b/cabins/cabin/photos.html
@@ -20,10 +20,6 @@
 	var flicker = "https://www.flickr.com/photos/46656001@N07/albums/" + FID;
 
 	
-    
-
-	
-	
 	</script>
 <style>
 body {
@@ -36,11 +32,13 @@ body {
 
 <body>
 
-		<a data-flickr-embed="true"  href="https://www.flickr.com/photos/46656001@N07/albums/72157623230132270" title="WBR Photo Album"><img src="https://live.staticflickr.com/4022/4282996092_4f354daa91_z.jpg" width="640" height="426" alt="WBR Photo Album"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
+<a href="" title="WBR Photo Album" id="flick" data-flickr-embed="true"><img src="https://live.staticflickr.com/4022/4282996092_4f354daa91_z.jpg" width="640" height="426" alt="WBR Photo Album"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 
 <script>
-	document.getElementById("flick").herf = flicker;
+var x = flicker;
+document.getElementById("flick").herf = x;
 </script>
+
 
 </body>
 </html>
