--- a/cabins/cabin/photos.html
+++ b/cabins/cabin/photos.html
@@ -34,9 +34,15 @@ body {
 
 <a href="" title="WBR Photo Album" id="flick" data-flickr-embed="true"><img src="https://live.staticflickr.com/4022/4282996092_4f354daa91_z.jpg" width="640" height="426" alt="WBR Photo Album"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>
 
+
+<p id="demo"></p>
+
+
+
 <script>
 var x = flicker;
 document.getElementById("flick").herf = x;
+document.getElementById("demo").innerHTML = x;
 </script>
 
 
