fixed a miss spelling

--- a/cabins/cabin/photos.html
+++ b/cabins/cabin/photos.html
@@ -41,8 +41,8 @@ body {
 
 <script>
 var x = flicker;
-document.getElementById("flick").herf = x;
-document.getElementById("demo").innerHTML = x;
+document.getElementById("flick").href = x;
+
 </script>
 
 
