--- a/specials/specials.html
+++ b/specials/specials.html
@@ -123,13 +123,13 @@ function lyteflash(url,width,height,ftitle) {
 <br>
 Come enjoy the Summer at WOODLAND BEACH RESORT!!!
 <br><br>
-Book your 2019 Summer Vacation NOW!!! We still have some great cabins available next summer!!!
+Book your 2020 Summer Vacation NOW!!! We still have some great cabins available next summer!!!
 <br><br>
 <!--<strong>FALL SPECIAL!!!</strong>  Stay two nights and get the 3rd night 1/2 off our published off-season rates.
 <br>
 Valid September 14th - October 21st, must mention offer at time of booking.
 <br><br>-->
-<strong>SPECIAL</strong> - Four bedroom two bath luxury cabins 10, 12, 18, 19 & 20 for $299.00 per night three night minimum stay.
+<strong>FALL SPECIAL</strong> - Four bedroom two bath luxury cabins 10, 12, 18, 19 & 20 for $299.00 per night three night minimum stay.
 <br>
 Valid - August 28th - October 28th.
 <br><br>
