--- a/boats/boats.html
+++ b/boats/boats.html
@@ -227,7 +227,7 @@ Ideal for 3 to 5 people.</td>
 </table>
 <table cellspacing="0" cellpadding="0" border="0" class="boatRates">
 	<tr>
-		<td valign="top"><img src="/images/Montego.jpg" width="204" height="205" border="0"></td>
+		<td valign="top"><img src="/images/Montego1.jpg" width="204" height="205" border="0"></td>
 		<td width="408" valign="top">
 		<table cellpadding="0" cellspacing="0" border="0" width="408" height="205" background="/images/boat_rate.gif" style="background-repeat:no-repeat; ">
 			<tr>
