Update Boat Slip Rates
Prices

--- a/rates/cabins.html
+++ b/rates/cabins.html
@@ -1079,8 +1079,8 @@ Paddle Boards/Kayaks........Free to use to Woodland Beach Resort Guests Only<br/
 <br/>
 Paddle Boat........Free to use to Woodland Beach Resort Guests Only<br/>
 Canoe........Free to use to Woodland Beach Resort Guests Only<br/>
-Boat slip (1)........$35.00 per day or $60.00 per week. All larger boats require prior approval.  Let us know size of boat.<br/>
-Pontoon slip (1)........$70.00 per day or $120.00 per week. All pontoons require prior approval.  Let us know size of pontoon.<br/>
+Boat slip (1)........$35.00 per day or $60.00 per week. All larger boats require prior approval.  <br>Let us know size of boat.<br/>
+Pontoon slip (1)........$70.00 per day or $120.00 per week. All pontoons require prior approval.  <br>Let us know size of pontoon.<br/>
 
 
 
