--- a/cabins/cabin20.html
+++ b/cabins/cabin20.html
@@ -161,6 +161,14 @@ function lyteflash(url,width,height,ftitle) {
 	</tr>
 	<tr>
 		<td width="21" valign="top">&nbsp;</td>
+		<td width="187" valign="top"><h3>DATES</h3></td>
+		<td width="38" valign="top" align="center">&nbsp;</td>
+		<td width="83" valign="top" align="center"><h3>WEEK</h3></td>
+		<td width="86" valign="top" align="center"><h3>NIGHT</h3></td>
+		<td width="190" style="padding:0px 0 0 10px;" valign="top"><h3>OTHER INFORMATION</h3></td>
+	</tr>
+	<tr>
+		<td width="21" valign="top">&nbsp;</td>
 		<td width="187" valign="top">5/1/20-6/26/20 &amp; 9/8/20-10/31/20</td>
 		<td width="38" valign="top" align="center">&nbsp;</td>
 		<td width="83" valign="top" align="center">$2,121.00</td>
