--- a/cabins/cabin15.html
+++ b/cabins/cabin15.html
@@ -123,7 +123,7 @@ function lyteflash(url,width,height,ftitle) {
 		<td valign="top">
 		<h1><img src="/images/cabin_15_title.jpg" width="267" height="26" border="0" alt="Cabin 15"></h1>
 		<p>
-		Charming three bedroom lake front knotty pine cabin has a beautiful view of Bay Lake from the living/dining room or from the wraparound deck. Perfect for the group wanting a little more privacy, one bedroom is on the main level while the other two and the bathroom is up one step to give you the feeling of a multi level cabin. This cabin has two bedrooms with double beds and one bedroom with two twin beds.  Many new updates for the 2013 season!!!
+		Charming three bedroom lake front knotty pine cabin has a beautiful view of Bay Lake from the living/dining room or from the wraparound deck. Perfect for the group wanting a little more privacy, one bedroom is on the main level while the other two and the bathroom is up one step to give you the feeling of a multi level cabin. This cabin has two bedrooms with double beds and one bedroom with two twin beds.  New kitchen, bath and other updates in 2018!!!
 		<br><br>
 		</p>
 		<p>
