--- a/events/index.html
+++ b/events/index.html
@@ -208,14 +208,13 @@ function lyteflash(url,width,height,ftitle) {
 <br/>
 <h2>Rates</h2>
 <p>For a weekend retreat (Arrive Friday at 10:00 AM and depart by Sunday at 4:00 PM).  Rate includes use of meeting area and one person per bed.</p>
-<p>Add a night or two for $45.00 per night per day.</p>
+<p>Add a night or two for $45.00 per night.</p>
 <p><strong>8 people or less - $125 per person<br/>
 9-12 people - $110 per person<br/>
 13+ people - $95 per person<br/>
 </strong></p>
-<p>With 15+ people the hostess stays free</p>
 <p>Rates not including 6.875% Minnesota Sales Tax and 1/2%local tax</p>
-<p>These rates are good between 1/4/19 - 5/13/19 and 9/6/19 - 5/11/19.</p>
+<p>These rates are good between 1/6/20 - 5/11/20 and 9/10/20 - 5/13/21.</p>
 <p>During the summer June, July and August we rent by the week, see cabin rate sheet.</p>
 <p>Please note that dogs are permitted for an additional fee.</p>
 <p>Contact us about rates for extra nights and additional information.</p>
