--- a/specials/specials.html
+++ b/specials/specials.html
@@ -121,22 +121,35 @@ function lyteflash(url,width,height,ftitle) {
 <h1>Specials at Woodland Beach Resort on Bay Lake</h1>
 <p> 
 <br>
-Come enjoy the Summer at WOODLAND BEACH RESORT!!!
+Come enjoy the Winter/Spring at WOODLAND BEACH RESORT!!!
 <br><br>
 Book your 2020 Summer Vacation NOW!!! We still have some great cabins available next summer!!!
+
+
+
+Change come enjoy the Summer  to Winter/Spring
+    Under Fall Special remove the word Fall
+    On all change valid date to Now-May 14th
+    On all change three nights to two nights
+    Labor Day change 2019 to 2020 and August 24 to August 29th.
+
+
+
+
 <br><br>
 <!--<strong>FALL SPECIAL!!!</strong>  Stay two nights and get the 3rd night 1/2 off our published off-season rates.
 <br>
 Valid September 14th - October 21st, must mention offer at time of booking.
 <br><br>-->
-<strong>FALL SPECIAL</strong> - Four bedroom two bath luxury cabins 10, 12, 18, 19 & 20 for $299.00 per night three night minimum stay.
+<strong>SPECIAL</strong> - Four bedroom two bath luxury cabins 10, 12, 18, 19 & 20 for $299.00 per night two night minimum stay.
 <br>
-Valid - August 28th - October 28th.
+Valid - Now-May 14th.
 <br><br>
-Two bedroom luxury cabins 9 & 11 for $199.00 per night, three night minimum stay.
+Two bedroom luxury cabins 9 & 11 for $199.00 per night, two night minimum stay.
 <br>
-Valid - August 28th - October 28th.<br><br>
-Labor Day 2019- Pay for the week of August 24th and stay till Labor Day, three nights FREE!!!
+Valid - Now-May 14th
+<br><br>
+Labor Day 2020 - Pay for the week of August 29th and stay till Labor Day, two nights FREE!!!
 <br><br>
 Enjoy your vacation by our NEWER POOL & HOT TUB Open by Memorial Day - October 1st and be on one of Minnesota's hidden jewels BAY LAKE
 <br><br>
