--- a/contact/contact.html
+++ b/contact/contact.html
@@ -133,7 +133,7 @@ Deerwood, MN 56444<br/>
 <br/>
 <span class="phone"><strong>218-866-0711 or Toll Free: 1-888-436-7770</strong></span><br/>
 <br/>
-Email: <a href="mailto:kpmwalleye@aol.com">kpmwalleye@aol.com</a><br/>
+Email: <a href="mailto:vacationwbr@gmail.com">vacationwbr@gmail.com</a><br/>
 </div>
 				<br><br><br><br>
 <!--PUT TEXT ENDS HERE-->
