--- a/events/index.html
+++ b/events/index.html
@@ -129,19 +129,17 @@ function lyteflash(url,width,height,ftitle) {
 <p><strong>Do you just need some time to relax with your pals?</strong></p>
 <br/>
 <p>Woodland Beach Resort nestled along Bay Lake is the perfect place to hold a retreat where you can relax, create, play, and share time with friends.</p>
-<h2>Types of Gatherings</h2>
-</ul>
+
+<br><br>
 <h2>The Retreat Lodge</h2>
 <p>The 1200 sq. ft. Retreat Lodge built in 2007 will comfortably hold up to 18 people for a craft retreat, and it will hold more people for a reunion or similar function.  The well-lit lodge has its own stair free entrance for easy loading and unloading of supplies.  The lodge also features several other amenities to make your retreat more comfortable including:</p>
 <ul>
     <li>A 6' table for each guest (up to 18 people)</li>
     <li>Task lighting, power strips, and waste baskets</li>
-    <li>102&quot; projection TV with surround sound that is compatible with DVD, VHS, iPod, and CDs</li>
-    <li>Upstairs loft allows guests to spread out</li>
-    <li>Free Wi-Fi</li>
-    <li>Snack kitchen with refrigerator/freezer, sink, microwave, coffeepot, and plenty of counter space for serving</li>
-    <li>Restroom</li>
-    <li>Heated floors on main level</li>
+    <li>New in 2020. 85” 4K flat panel TV with surround sound, stereo, blue ray player, Apple TV with Netflix, Disney +.
+		You have the ability to connect your own device (smart phone, I pad etc.).  WBR does not provide the HDMI cable.  You (guest) provides the cable that works for your device.
+		All controlled though a easy to use wall mounted key pad.
+		The meeting area also has enhanced Wi-Fi.</li>
 </ul>
 <h2>Accommodations</h2>
 <p>The resort has seven cabins built since 2005 that are available year round with Cabin #18 conveniently attached to the spacious Retreat Lodge.  This cabin is ideal for guests that have trouble getting around because they can enjoy the retreat and sleep without using any stairs.  All of the cabins have a fully equipped kitchen, stone gas fireplace, in-floor heat on main level, TV, sitting area, and screen porch or deck.  <em>Please note that bed linens and pillows are provided, but towels, soap, and dishrags are not included.</em></p>
